--- a/Server/Views/Home/Camera.cshtml
+++ b/Server/Views/Home/Camera.cshtml
@@ -5,11 +5,11 @@
     <script src="~/js/camera.js" asp-append-version="true"></script>
 }
 
-        <table id="example" class="table table-striped table-bordered dt-responsive nowrap" width="100%" cellspacing="0">
+        <table id="table-camera" class="table table-striped table-bordered dt-responsive nowrap" width="100%" cellspacing="0">
             <thead>
                 <tr>
-                    <th>ID</th>
                     <th>Name</th>
+                    <th>Video</th>
                 </tr>
             </thead>
         </table>  
