--- a/Server/Views/Shared/_Layout.cshtml
+++ b/Server/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Camera">Camera</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Device">Device</a>
+                        </li>
                     </ul>
                 </div>
             </div>
