--- a/Server/wwwroot/css/site.css
+++ b/Server/wwwroot/css/site.css
@@ -69,3 +69,12 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.dev-alarm {
+    color: red;
+    font-weight: bold;
+}
+.dev-ok {
+    color: green;
+    font-weight: bold;
+}
