add main/sub video

--- a/Server/Views/Home/Camera.cshtml
+++ b/Server/Views/Home/Camera.cshtml
@@ -10,6 +10,7 @@
                 <tr>
                     <th>Name</th>
                     <th>Video</th>
+                    <th>Video</th>
                 </tr>
             </thead>
         </table>  
