--- a/Server/Views/Home/Device.cshtml
+++ b/Server/Views/Home/Device.cshtml
@@ -11,6 +11,7 @@
                     <th>Name</th>
                     <th>Status</th>
                     <th>Video</th>
+                    <th>Video</th>
                 </tr>
             </thead>
         </table>  
