--- a/Server/Views/Shared/_Layout.cshtml
+++ b/Server/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - Server - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - Server
         </div>
     </footer>
 
