--- a/Server/Views/Home/Camera.cshtml
+++ b/Server/Views/Home/Camera.cshtml
@@ -1,16 +1,17 @@
 ﻿@{
-    ViewData["Title"] = "Camera Page";
+    ViewData["Title"] = "Камеры";
 }
 @section scripts {
     <script src="~/js/camera.js" asp-append-version="true"></script>
 }
-
-        <table id="table-camera" class="table table-striped table-bordered dt-responsive nowrap" width="100%" cellspacing="0">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Video</th>
-                    <th>Video</th>
-                </tr>
-            </thead>
-        </table>  
+<div class="table-responsive">
+    <table id="table-camera" class="table table-striped table-bordered">
+        <thead>
+            <tr>
+                <th>Камера</th>
+                <th>Видео</th>
+                <th>Видео</th>
+            </tr>
+        </thead>
+    </table>
+</div>
