--- a/Server/Views/Home/Device.cshtml
+++ b/Server/Views/Home/Device.cshtml
@@ -1,17 +1,18 @@
 ﻿@{
-    ViewData["Title"] = "Device Page";
+    ViewData["Title"] = "Датчики";
 }
 @section scripts {
     <script src="~/js/device.js" asp-append-version="true"></script>
 }
-
-        <table id="table-divice" class="table table-striped table-bordered dt-responsive nowrap" width="100%" cellspacing="0">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Status</th>
-                    <th>Video</th>
-                    <th>Video</th>
-                </tr>
-            </thead>
-        </table>  
+<div class="table-responsive">
+    <table id="table-divice" class="table table-striped table-bordered">
+        <thead>
+            <tr>
+                <th>Датчики</th>
+                <th>Состояние</th>
+                <th>Видео</th>
+                <th>Видео</th>
+            </tr>
+        </thead>
+    </table>
+</div>
