--- a/Server/Views/Home/Camera.cshtml
+++ b/Server/Views/Home/Camera.cshtml
@@ -1,9 +1,11 @@
-﻿@{
+﻿@model Server.Models.MyModel
+@{
     ViewData["Title"] = "Камеры";
 }
 @section scripts {
     <script src="~/js/camera.js" asp-append-version="true"></script>
 }
+<input type="hidden" value="@Url.Action("CameraTable", "Home", new { stand = Model.stand })" id="url" />
 <div class="table-responsive">
     <table id="table-camera" class="table table-striped table-bordered">
         <thead>
